--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -1,29 +1,8 @@
-## IMPORTANT NOTE TO EDITORS OF THIS FILE ##
-
-## Note that when you create a PR the jobs in this file are triggered off the
-## `pull_request_target` event instead of `pull_request` event. This is because
-## the `pull_request` event makes secrets only available to PRs from branches,
-## not from forks, and some of these jobs require secrets. So with `pull_request_target`
-## we're making secrets available to fork-based PRs too. Using `pull_request_target"
-## has a side effect, which is that the workflow execution will be driven by the
-## state of the <workflow>.yaml on the `main` (=target) branch, even if you edited
-## the <workflow>.yaml in your PR. So when you for example add a new job here, you
-## won't see that job appear in the PR itself. It will only become effective once
-## you merge the PR to main. Therefore, if you want to add a new job here and want
-## to test it's functionality prior to a merge to main, you have to to _temporarily_
-## change the trigger event from `pull_request_target` to `pull_request`.
-
-## Additionally, because `pull_request_target` gets secrets injected for forked PRs
-## we use `https://github.com/sushichop/action-repository-permission` to ensure these
-## jobs are only executed when a repo member with "write" permission has triggered
-## the workflow (directly through a push or indirectly by applying a label or enabling
-## auto_merge).
-
-name: "Build+Push Images"
+name: "stuff"
 on: # build on main branch OR when a PR is labeled with `CICD:build-images`
   # Allow us to run this specific workflow without a PR
   workflow_dispatch:
-  pull_request_target:
+  pull_request:
     types: [labeled, opened, synchronize, reopened, auto_merge_enabled]
   push:
     branches:
@@ -42,13 +21,6 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  GCP_DOCKER_ARTIFACT_REPO: ${{ secrets.GCP_DOCKER_ARTIFACT_REPO }}
-  AWS_ECR_ACCOUNT_NUM: ${{ secrets.ENV_ECR_AWS_ACCOUNT_NUM }}
-  # In case of pull_request events by default github actions merges main into the PR branch and then runs the tests etc
-  # on the prospective merge result instead of only on the tip of the PR.
-  # For more info also see https://github.com/actions/checkout#checkout-pull-request-head-commit-instead-of-merge-commit
-  GIT_SHA: ${{ github.event.pull_request.head.sha || github.sha }}
-
   # TARGET_CACHE_ID is used as part of the docker tag / cache key inside our bake.hcl docker bake files.
   # The goal here is to have a branch or PR-local cache such that consecutive pushes to a shared branch or a specific PR can
   # reuse layers from a previous docker build/commit.
@@ -65,7 +37,7 @@ permissions:
 # This workflow is designed such that:
 # 1. Run ALL jobs when a 'push', 'workflow_dispatch' triggered the workflow or on 'pull_request's which have set auto_merge=true or have the label "CICD:run-e2e-tests".
 # 2. Run ONLY the docker image building jobs on PRs with the "CICD:build-images" label.
-# 3. Run NOTHING when neither 1. or 2.'s conditions are satisfied.
+# 3. Run NOTHING whe  n neither 1. or 2.'s conditions are satisfied.
 jobs:
   permission-check:
     if: |
@@ -98,23 +70,21 @@ jobs:
     # trigger only for push events (on protected branches as defined above) OR on PR events with the "CICD:build-images" label.
     needs: [permission-check, determine-last-green-commit]
 
-    runs-on: high-perf-docker
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        with:
-          ref: ${{ env.GIT_SHA }}
 
       - uses: ./.github/actions/gar-auth
-        with:
-          GCP_WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-          GCP_SERVICE_ACCOUNT_EMAIL: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+
+      - uses: ./.github/actions/load-secrets
+        id: secrets
 
       - name: Login to ECR
         uses: docker/login-action@v2
         with:
-          registry: ${{ secrets.ENV_ECR_AWS_ACCOUNT_NUM }}.dkr.ecr.us-west-2.amazonaws.com
-          username: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          registry: ${{ steps.secrets.outputs.AWS_ACCOUNT_NUM }}.dkr.ecr.us-west-2.amazonaws.com
+          username: ${{ steps.secrets.outputs.AWS_ACCESS_KEY_ID }}
+          password: ${{ steps.secrets.outputs.AWS_SECRET_ACCESS_KEY }}
 
       - uses: ./.github/actions/docker-buildx-setup
 
@@ -122,6 +92,8 @@ jobs:
         run: docker/docker-bake-rust-all.sh
         env:
           LAST_GREEN_COMMIT: ${{ needs.determine-last-green-commit.outputs.lastGreenCommit }}
+          GCP_DOCKER_ARTIFACT_REPO: ${{ steps.secrets.outputs.GCP_DOCKER_ARTIFACT_REPO }}
+          AWS_ACCOUNT_NUM: ${{ steps.secrets.outputs.AWS_ACCOUNT_NUM }}
 
   sdk-release:
     needs: rust-images
@@ -151,7 +123,6 @@ jobs:
     uses: ./.github/workflows/run-forge.yaml
     secrets: inherit
     with:
-      GIT_SHA: ${{ github.event.pull_request.head.sha || github.sha }}
       # Use the cache ID as the Forge namespace so we can limit Forge test concurrency on k8s, since Forge
       # test lifecycle is separate from that of GHA. This protects us from the case where many Forge tests are triggered
       # by this GHA. If there is a Forge namespace collision, Forge will pre-empt the existing test running in the namespace.
@@ -159,23 +130,23 @@ jobs:
 
   community-platform:
     needs: [permission-check]
-    runs-on: high-perf-docker
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           ref: ${{ env.GIT_SHA }}
 
       - uses: ./.github/actions/gar-auth
-        with:
-          GCP_WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-          GCP_SERVICE_ACCOUNT_EMAIL: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+
+      - uses: ./.github/actions/load-secrets
+        id: secrets
 
       - name: Login to ECR
         uses: docker/login-action@v2
         with:
-          registry: ${{ secrets.ENV_ECR_AWS_ACCOUNT_NUM }}.dkr.ecr.us-west-2.amazonaws.com
-          username: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          registry: ${{ steps.secrets.outputs.AWS_ACCOUNT_NUM }}.dkr.ecr.us-west-2.amazonaws.com
+          username: ${{ steps.secrets.outputs.AWS_ACCESS_KEY_ID }}
+          password: ${{ steps.secrets.outputs.AWS_SECRET_ACCESS_KEY }}
 
       - uses: ./.github/actions/docker-buildx-setup
 
@@ -183,26 +154,27 @@ jobs:
         run: |
           cd ecosystem/platform/server
           docker buildx bake --progress=plain --push -f ./docker-bake.hcl
+        env:
+          GCP_DOCKER_ARTIFACT_REPO: ${{ steps.secrets.outputs.GCP_DOCKER_ARTIFACT_REPO }}
+          AWS_ACCOUNT_NUM: ${{ steps.secrets.outputs.AWS_ACCOUNT_NUM }}
 
   indexer-server:
     needs: [permission-check]
     runs-on: high-perf-docker
     steps:
       - uses: actions/checkout@v3
-        with:
-          ref: ${{ env.GIT_SHA }}
 
       - uses: ./.github/actions/gar-auth
-        with:
-          GCP_WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.GCP_WORKLOAD_IDENTITY_PROVIDER }}
-          GCP_SERVICE_ACCOUNT_EMAIL: ${{ secrets.GCP_SERVICE_ACCOUNT_EMAIL }}
+
+      - uses: ./.github/actions/load-secrets
+        id: secrets
 
       - name: Login to ECR
         uses: docker/login-action@v2
         with:
-          registry: ${{ secrets.ENV_ECR_AWS_ACCOUNT_NUM }}.dkr.ecr.us-west-2.amazonaws.com
-          username: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          registry: ${{ steps.secrets.outputs.AWS_ACCOUNT_NUM }}.dkr.ecr.us-west-2.amazonaws.com
+          username: ${{ steps.secrets.outputs.AWS_ACCESS_KEY_ID }}
+          password: ${{ steps.secrets.outputs.AWS_SECRET_ACCESS_KEY }}
 
       - uses: ./.github/actions/docker-buildx-setup
 
@@ -210,3 +182,6 @@ jobs:
         run: |
           cd ecosystem/indexer-server
           docker buildx bake --progress=plain --push -f ./docker-bake.hcl
+        env:
+          GCP_DOCKER_ARTIFACT_REPO: ${{ steps.secrets.outputs.GCP_DOCKER_ARTIFACT_REPO }}
+          AWS_ACCOUNT_NUM: ${{ steps.secrets.outputs.AWS_ACCOUNT_NUM }}
