--- a/.github/workflows/run-forge.yaml
+++ b/.github/workflows/run-forge.yaml
@@ -37,13 +37,8 @@ on:
         default: false
         description: Whether to post the test results comment to Slack
 env:
-  AWS_ACCOUNT_NUM: ${{ secrets.ENV_ECR_AWS_ACCOUNT_NUM }}
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_REGION: us-west-2
   IMAGE_TAG: ${{ inputs.GIT_SHA }}
-  FORGE_ENABLED: ${{ secrets.FORGE_ENABLED }}
-  FORGE_BLOCKING: ${{ secrets.FORGE_BLOCKING }}
   FORGE_CLUSTER_NAME: ${{ inputs.FORGE_CLUSTER_NAME }}
   FORGE_OUTPUT: forge_output.txt
   FORGE_REPORT: forge_report.json
@@ -55,7 +50,6 @@ env:
   FORGE_NAMESPACE: ${{ inputs.FORGE_NAMESPACE }}
   FORGE_TEST_SUITE: ${{ inputs.FORGE_TEST_SUITE }}
   POST_TO_SLACK: ${{ inputs.POST_TO_SLACK }}
-  WRAPPER_KILLSWITCH: ${{ secrets.FORGE_WRAPPER_KILLSWITCH }}
 
 jobs:
   forge:
@@ -64,12 +58,37 @@ jobs:
       issues: write
       pull-requests: write
     steps:
+
+      - uses: ./.github/actions/load-ci-env
+
       - uses: actions/checkout@v3
         if: env.FORGE_ENABLED == 'true'
         with:
           ref: ${{ inputs.GIT_SHA }}
           # get the last 10 commits if IMAGE_TAG is not specified
           fetch-depth: env.IMAGE_TAG != null && 0 || 10
+
+      - uses: ./.github/actions/gar-auth
+
+      # TODO: consider moving the secrets and environment variables step into a composite action
+      - id: "secrets"
+        uses: "google-github-actions/get-secretmanager-secrets@v0"
+        with:
+          secrets: |-
+            AWS_ACCOUNT_NUM:aptos-ci/AWS_ACCOUNT_NUM
+            AWS_ACCESS_KEY_ID:aptos-ci/AWS_ACCESS_KEY_ID
+            AWS_SECRET_ACCESS_KEY:aptos-ci/AWS_SECRET_ACCESS_KEY
+            PUSH_GATEWAY:aptos-ci/PUSH_GATEWAY
+            PUSH_GATEWAY_USER:aptos-ci/PUSH_GATEWAY_USER
+            PUSH_GATEWAY_PASSWORD:aptos-ci/PUSH_GATEWAY_PASSWORD
+            FORGE_SLACK_WEBHOOK_URL:aptos-ci/FORGE_SLACK_WEBHOOK_URL
+
+      - name: Expose secrets as environment variables
+        run: |
+          echo "AWS_ACCOUNT_NUM=${{ steps.secrets.outputs.AWS_ACCOUNT_NUM }}" >> $GITHUB_ENV
+          echo "AWS_ACCESS_KEY_ID=${{ steps.secrets.outputs.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
+          echo "AWS_SECRET_ACCESS_KEY=${{ steps.secrets.outputs.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+
       - uses: actions/setup-python@v4
         if: env.FORGE_ENABLED == 'true'
         with:
@@ -105,9 +124,9 @@ jobs:
         if: env.FORGE_ENABLED == 'true'
         shell: bash
         env:
-          PUSH_GATEWAY: ${{ secrets.PUSH_GATEWAY }}
-          PUSH_GATEWAY_USER: ${{ secrets.PUSH_GATEWAY_USER }}
-          PUSH_GATEWAY_PASSWORD: ${{ secrets.PUSH_GATEWAY_PASSWORD }}
+          PUSH_GATEWAY: ${{ steps.secrets.outputs.PUSH_GATEWAY }}
+          PUSH_GATEWAY_USER: ${{ steps.secrets.outputs.PUSH_GATEWAY_USER }}
+          PUSH_GATEWAY_PASSWORD: ${{ steps.secrets.outputs.PUSH_GATEWAY_PASSWORD }}
         run: |
           set +e
 
@@ -148,4 +167,4 @@ jobs:
               "text": "${{ job.status == 'success' && ':white_check_mark:' || ':x:' }} ${{ github.job }}(suite: `${{ inputs.FORGE_TEST_SUITE }}`, namespace: `${{ inputs.FORGE_NAMESPACE }}`): <${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|link>"
             }
         env:
-          SLACK_WEBHOOK_URL: ${{ secrets.FORGE_SLACK_WEBHOOK_URL }}
+          SLACK_WEBHOOK_URL: ${{ steps.secrets.outputs.FORGE_SLACK_WEBHOOK_URL }}
